istio/yamls/istio-yamls/nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
  namespace: development
spec:
  hosts:
  - "*.clients.alice.com"
  gateways:
  - nginx-gateway.istio-system.svc.cluster.local
  tls:
    - match:
      - port: 443
        sniHosts:
        - client-4.clients.alice.com
      route:
      - destination:
          host: nginx-service.development.svc.cluster.local
          port:
            number: 443
